<resources>
    <string name="app_name">Randomie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="randomie">Randomie</string>
    <string name="languages">Languages</string>
    <string name="magic_ball">Magic Ball</string>
    <string name="dice">Dice</string>
    <string name="coin">Coin</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="english">English</string>
    <string name="deutche">Deutche</string>
    <string name="russian">Русский</string>
    <string name="french">Français</string>
    <string name="spanish">Español</string>
    <string name="italiano">Italiano</string>
    <string name="korean">한국인</string>
    <string name="japanese">日本</string>
    <string name="chinese">中国人</string>
    <string name="flip_a_coin">Flip a coin</string>
    <string name="tails">Tails</string>
    <string name="head">Head</string>
    <string name="roll">Roll</string>
    <string name="copy">Copied</string>
    <string name="your_number">Your number</string>
    <string name="from">From</string>
    <string name="enter_min_number">Enter min number</string>
    <string name="to">To</string>
    <string name="enter_max_number">Enter max number</string>
    <string name="randomize">Randomize</string>
    <string name="tap_on_ball">Tap on ball</string>
    <string name="It_is_certain">It is certain</string>
    <string name="It_is_decidedly_so">It is decidedly so</string>
    <string name="Without_a_doubt">Without a doubt</string>
    <string name="Yes_definitely">Yes — definitely</string>
    <string name="You_may_rely_on_it">You may rely on it</string>
    <string name="Very_doubtful">Very doubtful</string>
    <string name="Outlook_not_so_good">Outlook not so good</string>
    <string name="My_sources_say_no">My sources say no</string>
    <string name="My_reply_is_no">My reply is no</string>
    <string name="Dont_count_on_it">Don’t count on it</string>
    <string name="As_I_see_it_yes">As I see it, yes</string>
    <string name="Most_likely">Most likely</string>
    <string name="Outlook_good">Outlook good</string>
    <string name="Signs_point_to_yes">Signs point to yes</string>
    <string name="Yes">Yes</string>
    <string name="Reply_hazy_try_again">Reply hazy, try again</string>
    <string name="Ask_again_later">Ask again later</string>
    <string name="Better_not_tell_you_now">Better not tell you now</string>
    <string name="Cannot_predict_now">Cannot predict now</string>
    <string name="Concentrate_and_ask_again">Concentrate and ask again</string>
    <string name="your_password">Your password</string>
    <string name="specific_symbols">Specific symbols</string>
    <string name="symbols"><![CDATA[[](){}!?._*$#@%^<>]]></string>
    <string name="length">Length</string>
    <string name="max_30">Max 30</string>
</resources>