<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".OptionsFragment">

    <TextView
        android:id="@+id/Languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/languages"
        android:textColor="@color/White"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />


    <ImageButton
        android:rotation="180"
        android:id="@+id/back_button"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@color/Black"
        android:src="@drawable/back"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <android.widget.Button
        android:id="@+id/english"
        android:fontFamily="@font/rubik_medium"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="164dp"
        android:background="@color/White"
        android:src="@drawable/english"
        android:text="@string/english"
        android:textAllCaps="false"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/german"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="164dp"
        android:background="@color/White"
        android:text="@string/deutche"
        android:textAllCaps="false"
        android:fontFamily="@font/rubik_medium"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/russian"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="164dp"
        android:background="@color/White"
        android:text="@string/russian"
        android:textAllCaps="false"
        android:fontFamily="@font/rubik_medium"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/french"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="248dp"
        android:background="@color/White"
        android:text="@string/french"
        android:fontFamily="@font/rubik_medium"
        android:textAllCaps="false"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/spanish"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="248dp"
        android:background="@color/White"
        android:text="@string/spanish"
        android:fontFamily="@font/rubik_medium"
        android:textAllCaps="false"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/italian"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="248dp"
        android:background="@color/White"
        android:text="@string/italiano"
        android:textAllCaps="false"
        android:fontFamily="@font/rubik_medium"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/korean"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="340dp"
        android:background="@color/White"
        android:text="@string/korean"
        android:fontFamily="@font/rubik_medium"
        android:textAllCaps="false"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/japanese"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="340dp"
        android:background="@color/White"
        android:text="@string/japanese"
        android:textAllCaps="false"
        android:fontFamily="@font/rubik_medium"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/chinese"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="340dp"
        android:background="@color/White"
        android:text="@string/chinese"
        android:fontFamily="@font/rubik_medium"
        android:textAllCaps="false"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="148dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="131dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="263dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="280dp" />

</androidx.constraintlayout.widget.ConstraintLayout>