<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberFragment"
    android:background="@color/Black">

    <TextView
        android:id="@+id/logo"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="@drawable/randomie"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/randomie"
        android:textColor="@color/Black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="53dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:background="@color/Black"
        android:src="@drawable/back"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/yournumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/your_number"
        android:textColor="@color/White"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text=""
        android:textColor="@color/White"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yournumber" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/from"
            android:textColor="@color/Black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/minnumber"
            android:textColorHint="@color/Grey"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:autofillHints="0"
            android:hint="@string/enter_min_number"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:digits="-0123456789"
            android:imeOptions="actionNext"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from" />

        <TextView
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/to"
            android:textColor="@color/Black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/maxnumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:autofillHints="100"
            android:background="@drawable/rectangle"
            android:digits="-0123456789"
            android:ems="10"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:hint="@string/enter_max_number"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColor="@color/White"
            android:textColorHint="@color/Grey"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to" />

        <android.widget.Button
            android:letterSpacing="0"
            android:id="@+id/randomize"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/randomize"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="25sp"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxnumber" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>