<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YesFragment"
    android:background="@color/Black">

    <TextView
        android:id="@+id/logo"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="@drawable/randomie"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/randomie"
        android:textColor="@color/Black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@color/Black"
        android:src="@drawable/back"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/magic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/magic_ball"
        android:textColor="@color/White"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/ball"
        android:layout_width="335dp"
        android:layout_height="398dp"
        android:src="@drawable/ball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/text"
        android:layout_width="103dp"
        android:layout_height="100dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/tap_on_ball"
        android:textColor="@color/White"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

</androidx.constraintlayout.widget.ConstraintLayout>