<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinFragment"
    android:background="@color/Black">

    <TextView
        android:id="@+id/logo"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:background="@drawable/randomie"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/randomie"
        android:textColor="@color/Black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@color/Black"
        android:src="@drawable/back"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/yournumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/flip_a_coin"
        android:textColor="@color/White"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/coin"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/coin0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yournumber"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/fell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/tails"
        android:textColor="@color/White"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin" />

</androidx.constraintlayout.widget.ConstraintLayout>